Added User OneToMany reference to Vehicle and inverse ManyToOne. Added addVehicle and removeVehicle to mutate the Set<Vehicle>. Added UserNotFoundException. Bootstrappified thymeleaf pages. Removed usercreatepage as the same could be done with the editpage. Slightly changed the creation of Dummy entities at startup.