@@ -5,7 +5,6 @@ import nl.conspect.drivedok.model.*;
 import nl.conspect.drivedok.services.ParkingSpotService;
 import nl.conspect.drivedok.services.ParkingZoneService;
 import nl.conspect.drivedok.services.UserService;
-import nl.conspect.drivedok.services.VehicleService;
 import org.springframework.context.ApplicationListener;
 import org.springframework.context.event.ContextRefreshedEvent;
 import org.springframework.stereotype.Component;
@@ -18,19 +17,13 @@ public class DriveDokEventListeners implements ApplicationListener<ContextRefres
 
     private final ParkingZoneService parkingZoneService;
     private final ParkingSpotService parkingSpotService;
-    private final VehicleService vehicleService;
     private final UserService userService;
-
-    Set<Vehicle> sjaaksVehicles;
-    Set<Vehicle> piensVehicles;
 
     public DriveDokEventListeners(ParkingZoneService parkingZoneService,
                                   ParkingSpotService parkingSpotService,
-                                  VehicleService vehicleService,
                                   UserService userService) {
         this.parkingZoneService = parkingZoneService;
         this.parkingSpotService = parkingSpotService;
-        this.vehicleService = vehicleService;
         this.userService = userService;
     }
 
@@ -38,8 +31,7 @@ public class DriveDokEventListeners implements ApplicationListener<ContextRefres
     public void onApplicationEvent(ContextRefreshedEvent contextRefreshedEvent) {
         createDummyParkingZones();
         createDummyParkingSpots();
-        createDummyVehicles();
-        createDummyUser();
+        createDummyUsersAndVehicles();
     }
 
     private void createDummyParkingZones() {
@@ -60,24 +52,21 @@ public class DriveDokEventListeners implements ApplicationListener<ContextRefres
         parkingSpotService.create(plek3);
     }
 
-    private void createDummyVehicles() {
-        sjaaksVehicles = Set.of(
-                new Vehicle("Auto van de Sjaak", "H-000-B", ParkingType.NORMAL, Collections.emptySet()),
-                new Vehicle("Electrische auto", "H-001-C", ParkingType.ELECTRIC, Collections.emptySet()),
-                new Vehicle("Zonnepaneel fiets", "H-002-D", ParkingType.DISABLED, Collections.emptySet())
+    private void createDummyUsersAndVehicles() {
+        var sjaaksVehicles = Set.of(
+                new Vehicle("Auto van de Sjaak", "H-000-B", ParkingType.NORMAL),
+                new Vehicle("Electrische auto", "H-001-C", ParkingType.ELECTRIC),
+                new Vehicle("Zonnepaneel fiets", "H-002-D", ParkingType.DISABLED)
         );
-        piensVehicles = Set.of(
-                new Vehicle("Volkswagen Pino", "H-000-E", ParkingType.ELECTRIC, Collections.emptySet()),
-                new Vehicle("Motor", "H-001-F", ParkingType.NORMAL, Collections.emptySet())
+        var piensVehicles = Set.of(
+                new Vehicle("Volkswagen Pino", "H-000-E", ParkingType.ELECTRIC),
+                new Vehicle("Motor", "H-001-F", ParkingType.NORMAL)
         );
-        sjaaksVehicles.forEach(vehicleService::create);
-        piensVehicles.forEach(vehicleService::create);
-    }
-
-    private void createDummyUser() {
-        var user1 = new User("Sjaak", "sjaak@email.nl", "password123", sjaaksVehicles);
-        userService.create(user1);
-        var user2 = new User("Pien", "pien@email.nl", "zomer2020", piensVehicles);
-        userService.create(user2);
+        var sjaak = new User("Sjaak", "sjaak@email.nl", "password123");
+        sjaaksVehicles.forEach(sjaak::addVehicle);
+        userService.create(sjaak);
+        var pien = new User("Pien", "pien@email.nl", "zomer2020");
+        piensVehicles.forEach(pien::addVehicle);
+        userService.create(pien);
     }
 }
